--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
         </li> -->
 
         <li>
-          <a href="https://github.com/DEVL37/ARK-pjct" target="_blank" class="social-link">
+          <a href="https://github.com/DEVL37/PORTFOLIO "gitarget="_blank" class="social-link">
             <ion-icon name="logo-github"></ion-icon>
           </a>
         </li>
